k8s/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    component: api-pod
spec:
  containers:
    - name: api
      image: mmalujdy/car-dealership-api
      ports:
        - containerPort: 5558
