k8s/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: sqlserver
  template:
    metadata:
      labels:
        component: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2019-CU15-ubuntu-20.04
          ports:
            - containerPort: 1433
