k8s/sqlserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sqlserver-pod
  labels:
    component: sqlserver-pod
spec:
  containers:
    - name: sqlserver
      image: mcr.microsoft.com/mssql/server:2019-CU15-ubuntu-20.04
      ports:
        - containerPort: 1433
