k8s/sqlserver-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: sqlserver-deployment
  ports:
    - port: 1433
      targetPort: 1433
